Fix: Image Widht and intro alignment

--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ a {
   animation-timing-function: ease-in;
   animation-duration: 1s;
   display: flex;
+  justify-content: space-evenly;
 }
 .gradient-text {
   background-image: linear-gradient(45deg, #7f4ede, #ce4ede);
@@ -60,7 +61,6 @@ a {
   padding: 0vw 1.5vw;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 #img-track {
   display: flex;
